The parse input file and completion procedures are filled

--- a/fortran/truss/Untitled2_strange.in
+++ b/fortran/truss/Untitled2_strange.in
@@ -1,27 +1,26 @@
 #nnodes nelements
-4 3
-#coord nodes (nn)
+6 6
+#coord nodes
 1.00E00 0.00E00 0.00E00 
 0.00E00 0.00E-1 0.00E00 
 0.00E00 5.00E-1 0.00E00 
-#structure pattern of elmts (ne)
-1 1 2 
-2 1 3 
-# (ne, 2+1) types of connection for element (nn,ne) see code TypesBalkDef.f90 to have a description of the code, 7 is not treated yet
-1 3 1 0 3 0 0 
-2 3 0 0 5 0 1
-3 1 1 0 5 0 1
-#(n, 3+1) displacement/angles Ux,Vx,Az imposed typ: 0 = disp known see next struct, 1=unknown beam, 2=unknown rod disp imposed, eg (1 0 1 1): node 1 (first) is an horizontal rail disp imposed, Fy and Mz as nodes from beam equal zero
+#structure pattern of elmts
+1 1 2
+2 1 3
+# (ne, 2+1) types of connection for Ux,Vx,Mz,Uy,Vy,Mz (nn,ne) 0=not 1=beam connect, 2=rod connect for each elmt
+1 1 1
+2 2 2
+#(n, 3+1) displacement/angles Ux,Vx,Az imposed typ: 0 = disp known see next struct, 1=unknown beam, 2=unknown rod disp imposed, eg (1 0 1 1): node 1 (first) is an horizontal rail disp imposed, Fy and Mz as cantilever beam equal zero
 1 1 1 1
-2 0 0 0
-3 0 0 2
+2 1 1 1
+3 2 2 2
 #(n,3)values of known displacements or -1.0 (value to discard): correspond to struct 'Dimposed' or 'Dimponiert'
 0.00E00 0.00E00 0.00E00
 0.00E00 0.00E00 0.00E00
 0.00E00 0.00E00 0.00E00
 #(n, 3+1) force/moment Fx,Tx,Mz: 0 = force known see next struct, 1=to solve beam, 2=to solve rod (special treatment has to be done for rod)
 1 1 0 0
-2 1 1 0
+2 1 1 1
 3 2 2 0
 #(n,3) values of known forces or -1.0 (value to discard):
 -1.00E-1 -1.00E01 0.00E00
