just to commit big changes but Hermite2dDKT in particular has not been tested

--- a/fortran/truss/Makefile
+++ b/fortran/truss/Makefile
@@ -41,8 +41,9 @@ LINUX_FLAGS = \
         F90=$(FCOMP) \
         F90_CFLAGS=$(FC_FLAGS) \
 	MOD_FILES=""\
-	INPUTTRUSS="INPUTTRUSS_mod.mod" \
 	TYPESBALKEN="TYPESBALKEN.mod" \
+	INPUTTRUSS="INPUTTRUSS_mod.mod" \
+        CREATETRUSS="CREATETRUSS_mod.mod" \
 	PRINTABSTRACTSTRUCT="PRINTABSTRACTSTRUCT_mod.mod" \
 	RIGIDTRUSSCONTACTS="RIGIDTRUSSCONTACTS_mod.mod" 
 else
@@ -50,8 +51,9 @@ LINUX_FLAGS = \
         F90=$(FCOMP) \
         F90_CFLAGS=$(FC_FLAGS) \
 	MOD_FILES="" \
-	INPUTTRUSS="inputtruss_mod.mod" \
 	TYPESBALKEN="typesbalken.mod" \
+	INPUTTRUSS="inputtruss_mod.mod" \
+        CREATETRUSS="createtruss_mod.mod" \
 	PRINTABSTRACTSTRUCT="printabstractstruct_mod.mod" \
 	RIGIDTRUSSCONTACTS="rigidtrusscontacts_mod.mod"
 endif
@@ -70,6 +72,7 @@ endif
 #Regeln fuer Module
 $(TYPESBALKEN): typesbalken.o
 $(INPUTTRUSS): inputtruss.o
+$(CREATETRUSS): createtruss.o
 $(PRINTABSTRACTSTRUCT): printabstractstruct.o
 ${RIGIDTRUSSCONTACTS}: rigidtrusscontacts.o
 
@@ -92,6 +95,7 @@ sgi:
 #
 library: $(LIB)(typesbalken.o) \
          $(LIB)(inputtruss.o) \
+         $(LIB)(createtruss.o) \
 	 $(LIB)(printabstractstruct.o) \
 	 $(LIB)(rigidtrusscontacts.o)
 
@@ -126,8 +130,8 @@ cleanall:
 #
 $(LIB)(printabstractstruct.o): $(TYPESBALKEN)
 $(LIB)(rigidtrussstruct.o):$(PRINTABSTRACTSTRUCT) $(TYPESBALKEN) $(INPUTTRUSS)
-
-main.o: $(TYPESBALKEN) $(PRINTABTRACTSTRUCT) $(RIGIDTRUSSCONTACTS) $(INPUTTRUSS)
+$(LIB)(createtruss.o): $(TYPESBALKEN)
+main.o: $(TYPESBALKEN) $(PRINTABTRACTSTRUCT) $(RIGIDTRUSSCONTACTS) $(INPUTTRUSS) $(CREATETRUSS)
 
 	@echo "make cleanall completed..."
 
