--- a/fortran/truss/Untitled3.in
+++ b/fortran/truss/Untitled3.in
@@ -5,14 +5,13 @@
 000000 000000 000000
 000000 000050 000000
 000100 000000 000000
-#structure pattern of elmts (ne)
+#structure pattern of elmts (ne) (index + section A and Iz)
 1     1     2     100000 221000
 2     1     3     100000 -00100
-# (ne, 2+1) types of connection for element (nn,ne) see code TypesBalkDef.f90 to have a description of the code,
+# ne, types of connection for element at end1, displ. imposed/unknown end1, force  imposed/unknown end1, then then same at end2
 1     3     1     0     3     0     0 
 2     3     0     0     5     0     1
-3     1     1     0     5     0     1
-#(n, 3+1) displacement/angles Ux,Vx,Az imposed typ: 0 = disp known see next struct, 1=unknown beam, 2=unknown rod disp imposed, eg (1 0 1 1): node 1 (first) is an horizontal rail disp imposed, Fy and Mz as nodes from beam equal zero
+#(n, 3+1) displacement/angles Ux,Vx,Az imposed typ: 0 = disp known (OLD)
 1     1     1     1
 2     0     0     0
 3     0     0     2
@@ -20,18 +19,23 @@
 000000 000000 000000
 000000 000000 000000
 000000 000000 000000
-#(n, 3+1) force/moment Fx,Tx,Mz: 0 = force known see next struct, 1=to solve beam, 2=to solve rod (special treatment has to be done for rod)
+#(n, 3+1) force/moment Fx,Tx,Mz: 0 = force known (OLD)
 1     1     0     0
 2     1     1     0
 3     2     2     0
 #(n,3) values of known forces or -1.0 (value to discard):
--01000 -01000 000000
--00100 -00100 -00100
--20000 -00100 000000 
+000000 000000 000000
+000000 000000 000000
+000000 000000 000000
 #(nnel, values of distributed load for elmt)
 -00025 -00025
 -00100 -00100
-#beam type mesh definition file (note only Quadrangles are supported)
-beaminL.msh
+#geom pattern
+#        o<
+#       /  
+#     /
+#   /
+# |o|======//
+#     load  
 
 
