--- a/fortran/truss/Untitled3.in
+++ b/fortran/truss/Untitled3.in
@@ -1,32 +1,41 @@
-#nnodes nelements nbase
-3     2     1
+#nnodes nelements nbeams ngeobeam(nbase) nsection
+4     2     1     1     1
 2.70E06 3.00E-1 
-#coord nodes (nn) not formatting sufficient for less than 0.00XX values
+#coord nodes (nn) not formatting sufficient for less than 0000.XX values
 000000 000000 000000
 000000 000050 000000
+000050 000000 000000
 000100 000000 000000
-#structure pattern of elmts (ne) (index + section A and Iz)
-1     1     2     100000 221000
-2     1     3     100000 -00100
+#declaration of elmts (ne) (total num of nodes, coord nodes for elmt + section A and Iz)    100000 -00100     100000 221000
+1     1     2
+3     1     3
+#structure pattern of beam elmts
+1
+3
+4
 # ne, types of connection for element at end1, displ. imposed/unknown end1, force  imposed/unknown end1, then then same at end2
 1     3     1     0     3     0     0 
 2     3     0     0     5     0     1
 #(n, 3+1) displacement/angles Ux,Vx,Az imposed typ: 0 = disp known (OLD)
-1     1     1     1
-2     0     0     0
-3     0     0     2
-#(n,3)values of known displacements or -1.0 (value to discard): correspond to struct 'Dimposed' or 'Dimponiert'
+1     0     0     0
+2     0     0     2
+3     1     1     1
+4     1     1     1
+#(n,3)values of known displacements : correspond to struct 'Dimposed' or 'Dimponiert'
+000000 000000 000000
 000000 000000 000000
 000000 000000 000000
 000000 000000 000000
 #(n, 3+1) force/moment Fx,Tx,Mz: 0 = force known (OLD)
-1     1     0     0
-2     1     1     0
-3     2     2     0
-#(n,3) values of known forces or -1.0 (value to discard):
+1     1     1     0
+2     2     2     0
+3     1     0     0
+4     1     0     0
+#(n,3) values of known forces or -1.0
 000000 000000 000000
 000000 000000 000000
 000000 000000 000000
+000010 001000 000000
 #(nnel, values of distributed load for elmt)
 -00025 -00025
 -00100 -00100
