--- a/fortran/truss/Untitled3_f8.7.in
+++ b/fortran/truss/Untitled3_f8.7.in
@@ -1,12 +1,12 @@
 #nnodes nelements nbeams ngeobeam(nbase) nsection
 4     2     1     1     1
 2.70E06 3.00E-1 
-#coord nodes (nn) not formatting : X.YYEZZ or -X.YEZZ or X.YYE-Z, separated by three spaces
-0.00E00   0.00E00   0.00E00
-0.00E00   5.00E-1   0.00E00
-5.00E-1   0.00E00   0.00E00
-1.00E00   0.00E00   0.00E00
-#declaration of elmts (ne) (total num of nodes, coord nodes for elmt + section A and Iz) 1.00E03 -1.0 1.00E03 2.21E03
+#coord nodes (nn) not formatting sufficient for less than 0000.XX values
+000000 000000 000000
+000000 000050 000000
+000050 000000 000000
+000100 000000 000000
+#declaration of elmts (ne) (total num of nodes, coord nodes for elmt + section A and Iz)    100000 -00100     100000 221000
 1     1     2
 3     1     3
 #structure pattern of beam elmts
@@ -22,23 +22,23 @@
 3     1     1     1
 4     1     1     1
 #(n,3)values of known displacements : correspond to struct 'Dimposed' or 'Dimponiert'
-0.00E00   0.00E00   0.00E00
-0.00E00   0.00E00   0.00E00
-0.00E00   0.00E00   0.00E00
-0.00E00   0.00E00   0.00E00
+000000 000000 000000
+000000 000000 000000
+000000 000000 000000
+000000 000000 000000
 #(n, 3+1) force/moment Fx,Tx,Mz: 0 = force known (OLD)
 1     1     1     0
 2     2     2     0
 3     1     0     0
 4     1     0     0
 #(n,3) values of known forces or -1.0
-0.00E00   0.00E00   0.00E00
-0.00E00   0.00E00   0.00E00
-0.00E00   0.00E00   0.00E00
-1.00E-1   1.00E01   0.00E00
+000000 000000 000000
+000000 000000 000000
+000000 000000 000000
+000010 001000 000000
 #(nnel, values of distributed load for elmt)
--2.5E-1   -2.5E-1
--1.0E00   -1.0E00
+-00025 -00025
+-00100 -00100
 #geom pattern
 #        o<
 #       /  
